# munz-app-django

./: .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  entrypoint.sh  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/coins/: filters.py  handlers.py  schemas.py
core/api/v1/guests/: handlers.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/coins/: admin.py  containers.py
core/apps/coins/entities/: coins.py  reviews.py
core/apps/coins/exceptions/: coins.py  reviews.py
core/apps/coins/filters/: coins.py
core/apps/coins/migrations/: 0001_initial.py  0002_alter_coin_issue_at.py  0003_review.py
core/apps/coins/models/: __init__.py  base.py  coins.py  reviews.py
core/apps/coins/services/: coins.py  reviews.py
core/apps/coins/use_cases/reviews/: create.py
core/apps/common/: enums.py  models.py
core/apps/guests/: admin.py  apps.py  entities.py  models.py
core/apps/guests/exceptions/: codes.py  guests.py
core/apps/guests/migrations/: 0001_initial.py
core/apps/guests/services/: auth.py  codes.py  guests.py  senders.py
core/project/: asgi.py  containers.py  middlewares.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: monitoring.yaml  storages.yaml
tests/factories/: coins.py
tests/services/: conftest.py  test_coins.py
